kubernetes/education-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: education-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: education-service
  template:
    metadata:
      labels:
        app: education-service
    spec:
      containers:
        - name: education-service
          image: omonov2006/modme-microservices-clone-sphere-education-service:latest
          ports:
            - containerPort: 8080
