kubernetes/finance-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finance-service
  template:
    metadata:
      labels:
        app: finance-service
    spec:
      containers:
        - name: finance-service
          image: omonov2006/modme-microservices-clone-sphere-finance-service:latest
          ports:
            - containerPort: 8080
