kubernetes/lead-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lead-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lead-service
  template:
    metadata:
      labels:
        app: lead-service
    spec:
      containers:
        - name: lead-service
          image: omonov2006/modme-microservices-clone-sphere-lead-service:latest
          ports:
            - containerPort: 8080
