kubernetes/education-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: education-service
spec:
  selector:
    app: education-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
