kubernetes/lead-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lead-service
spec:
  selector:
    app: lead-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
