kubernetes/user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 80  # Exposed port in Kubernetes cluster
      targetPort: 8080  # Port your container listens on
  type: ClusterIP
