kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
spec:
  rules:
    - host: livesphere.uz
      http:
        paths:
          - path: /user-service
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - path: /api-gateway
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
